--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ services:
   
 before_install:
     #- chmod +x mvnw
-    - docker build -t sinch5/spring-cloud-config-server -f Dockerfile.dev ./spring-cloud-config-server
-    - docker build -t sinch5/spring-cloud-config-server -f Dockerfile.dev ./netflix-eureka-naming-server
+    - docker build -t sinch5/spring-cloud-config-server -f ./spring-cloud-config-server/Dockerfile.dev ./spring-cloud-config-server
+    - docker build -t sinch5/spring-cloud-config-server -f ./netflix-eureka-naming-server/Dockerfile.dev ./netflix-eureka-naming-server
 
 script:
     - docker run sinch5/spring-cloud-config-server mvn test
