--- a/netflix-eureka-naming-server/Dockerfile.dev
+++ b/netflix-eureka-naming-server/Dockerfile.dev
@@ -3,7 +3,7 @@ FROM maven:3-jdk-11 as builder
 # create app folder for sources
 RUN mkdir -p /build
 WORKDIR /build
-COPY settings.xml /root/.m2/
+#COPY settings.xml /root/.m2/
 COPY pom.xml /build
 #Download all required dependencies into one layer
 RUN mvn -B dependency:resolve dependency:resolve-plugins
