--- a/netflix-eureka-naming-server/Dockerfile.dev
+++ b/netflix-eureka-naming-server/Dockerfile.dev
@@ -6,7 +6,7 @@ WORKDIR /build
 #COPY settings.xml /root/.m2/
 COPY pom.xml /build
 #Download all required dependencies into one layer
-RUN mvn -B dependency:resolve dependency:resolve-plugins
+RUN mvn dependency:go-offline -B
 #Copy source code
 COPY src /build/src
 # Build application
