--- a/spring-cloud-config-server/Dockerfile
+++ b/spring-cloud-config-server/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /build
 COPY settings.xml /root/.m2/
 COPY pom.xml /build
 #Download all required dependencies into one layer
+RUN mvn dependency:go-offline -B
 #Copy source code
 COPY src /build/src
 # Build application
