--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,14 @@ services:
         build:
             dockerfile: Dockerfile.dev
             context: ./spring-cloud-config-server
+        ports:
+          - '8761:8761'
           
     netflix-eureka-naming-server:
         build:
             dockerfile: Dockerfile.dev
             context: ./netflix-eureka-naming-server
+        ports:
+          - '8888:8888'
     
   
