--- a/netflix-eureka-naming-server/pom.xml
+++ b/netflix-eureka-naming-server/pom.xml
@@ -70,6 +70,7 @@
 	</dependencyManagement>
 
 	<build>
+		<defaultGoal>package</defaultGoal>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
