--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ after_success:
 deploy:
     provider: elasticbeanstalk
     region: us-east-1
-    app: mostviews2
-    env: Mostviews2-env
+    app: mostviews
+    env: Mostviews-env
     bucket_name: elasticbeanstalk-us-east-1-608067911170
     bucket_path: config-server
     on:
