--- a/spring-cloud-config-server/Dockerfile
+++ b/spring-cloud-config-server/Dockerfile
@@ -10,7 +10,7 @@ RUN mvn dependency:go-offline -B
 #Copy source code
 COPY src /build/src
 # Build application
-RUN mvn -Dmaven.test.skip=true package
+RUN mvn package
 
 FROM openjdk:11-slim as runtime
 EXPOSE 8888
