--- a/netflix-eureka-naming-server/Dockerfile
+++ b/netflix-eureka-naming-server/Dockerfile
@@ -1,5 +1,5 @@
 ### BUILD image
-FROM maven:3-jdk-11-alpine as builder
+FROM maven:3-jdk-11 as builder
 # create app folder for sources
 RUN mkdir -p /build
 WORKDIR /build
