--- a/spring-cloud-config-server/Dockerfile
+++ b/spring-cloud-config-server/Dockerfile
@@ -1,9 +1,9 @@
 ### BUILD image
-FROM maven:3-jdk-11-alpine as builder
+FROM maven:3-jdk-11 as builder
 # create app folder for sources
 RUN mkdir -p /build
 WORKDIR /build
-COPY settings.xml /root/.m2/
+#COPY settings.xml /root/.m2/
 COPY pom.xml /build
 #Download all required dependencies into one layer
 RUN mvn dependency:go-offline -B
