--- a/.travis.yml
+++ b/.travis.yml
@@ -11,25 +11,29 @@ before_install:
     - docker build -t sinch5/netflix-eureka-naming-server -f ./netflix-eureka-naming-server/Dockerfile.dev ./netflix-eureka-naming-server
     - docker build -t sinch5/places-service -f ./places-service/Dockerfile.dev ./places-service
     - docker build -t sinch5/place-details-service -f ./place-details-service/Dockerfile.dev ./place-details-service
+    - docker build -t sinch5/distance-matrix-service -f ./distance-matrix-service/Dockerfile.dev ./distance-matrix-service
 
 script:
     - docker run sinch5/spring-cloud-config-server mvn test
     - docker run sinch5/netflix-eureka-naming-server mvn test
     - docker run sinch5/places-service mvn test
-    - docker run sinch5/places-details-service mvn test
+    - docker run sinch5/place-details-service mvn test
+    - docker run sinch5/distance-matrix-service mvn test
     
 after_success:
     - docker build -t sinch5/spring-cloud-config-server ./spring-cloud-config-server
     - docker build -t sinch5/netflix-eureka-naming-server ./netflix-eureka-naming-server
     - docker build -t sinch5/places-service ./places-service
-    - docker build -t sinch5/places-details-service ./places-details-service
+    - docker build -t sinch5/place-details-service ./places-details-service
+    - docker build -t sinch5/distance-matrix-service ./distance-matrix-service
       #Loginto docker
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
     #Take thos image and push them to gitgub
     - docker push sinch5/spring-cloud-config-server
     - docker push sinch5/netflix-eureka-naming-server
     - docker push sinch5/places-service
-    - docker push sinch5/places-details-service
+    - docker push sinch5/place-details-service
+    - docker push sinch5/distance-matrix-service
 deploy:
     provider: elasticbeanstalk
     region: us-east-1
