--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ deploy:
     provider: elasticbeanstalk
     region: us-east-1
     app: mostviews
-    env: Mostviews-env
+    env: Mostviews-env-1
     bucket_name: elasticbeanstalk-us-east-1-608067911170
     bucket_path: config-server
     on:
