--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
     - docker build -t sinch5/places-service -f ./places-service/Dockerfile.dev ./places-service
     - docker build -t sinch5/place-details-service -f ./place-details-service/Dockerfile.dev ./place-details-service
     - docker build -t sinch5/distance-matrix-service -f ./distance-matrix-service/Dockerfile.dev ./distance-matrix-service
+    - docker build -t sinch5/path-finder-service -f ./path-finder-service/Dockerfile.dev ./path-finder-service    
 
 script:
     - docker run sinch5/spring-cloud-config-server mvn test
@@ -19,6 +20,7 @@ script:
     - docker run sinch5/places-service mvn test
     - docker run sinch5/place-details-service mvn test
     - docker run sinch5/distance-matrix-service mvn test
+    - docker run sinch5/path-finder-service mvn test
     
 after_success:
     - docker build -t sinch5/spring-cloud-config-server ./spring-cloud-config-server
@@ -26,6 +28,7 @@ after_success:
     - docker build -t sinch5/places-service ./places-service
     - docker build -t sinch5/place-details-service ./place-details-service
     - docker build -t sinch5/distance-matrix-service ./distance-matrix-service
+    - docker build -t sinch5/path-finder-service ./path-finder-service
       #Loginto docker
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
     #Take thos image and push them to gitgub
@@ -34,6 +37,7 @@ after_success:
     - docker push sinch5/places-service
     - docker push sinch5/place-details-service
     - docker push sinch5/distance-matrix-service
+    - docker push sinch5/path-finder-service
 deploy:
     provider: elasticbeanstalk
     region: us-east-1
