--- a/places-service/src/main/resources/bootstrap.properties
+++ b/places-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
 spring.application.name=google-places-service
-spring.cloud.config.uri=http://configserver:8888
+spring.cloud.config.uri=http://localhost:8888
