--- a/place-details-service/src/main/resources/bootstrap.properties
+++ b/place-details-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
 spring.application.name=google-place-details-service
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://spring-cloud-config-server:8888
