--- a/netflix-eureka-naming-server/src/main/resources/application.properties
+++ b/netflix-eureka-naming-server/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 spring.cloud.inetutils.preferredNetworks=true
+spring.cloud.config.uri=http://spring-cloud-config-server:8888
