--- a/path-finder-service/src/main/resources/bootstrap.properties
+++ b/path-finder-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,6 @@
 spring.application.name=best-path-finder-service
 spring.cloud.config.uri=http://spring-cloud-config-server:8888
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.max-attempts=5
+spring.cloud.config.retry.initial-interval=1500
+spring.cloud.config.retry.multiplier=1.5
