--- a/distance-matrix-service/pom.xml
+++ b/distance-matrix-service/pom.xml
@@ -58,6 +58,15 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
