--- a/path-finder-service/src/test/resources/test.properties
+++ b/path-finder-service/src/test/resources/test.properties
@@ -1,3 +1,4 @@
 base.googlemaps.url=https://maps.googleapis.com
 directmatrix.url=/maps/api/distancematrix/json
 googlemaps.api.key=AIzaSyBeYKgIuqfyoM8-uC3ZdAud4e0inXXbR70
+spring.cloud.config.fail-fast=false
